# agent-workspaces

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  package.json
.claude/: settings.json
workspaces/sasoli0502/iphone-market-research/price-impact-analysis/: .gitignore  README.md  pyproject.toml  クイックコマンド.sh  テストデータ確認方法.md  データ収集チェックリスト.md  明日の作業手順.md
workspaces/sasoli0502/iphone-market-research/resale-market/: .gitignore  CLAUDE.md  README.md  debug_iosys_iPhone 12_128GB_A.html  debug_iosys_iPhone 12_128GB_B.html  debug_iosys_iPhone 12_128GB_C.html  debug_iosys_iPhone 12_128GB_S.html  debug_iosys_iPhone 12_256GB_A.html  debug_iosys_iPhone 12_256GB_B.html  debug_iosys_iPhone 12_256GB_C.html  debug_iosys_iPhone 12_256GB_S.html  debug_iosys_iPhone 12_64GB_A.html  debug_iosys_iPhone 12_64GB_B.html  debug_iosys_iPhone 12_64GB_C.html  debug_iosys_iPhone 12_64GB_S.html  debug_iosys_iPhone 13_128GB_A.html  debug_iosys_iPhone 13_128GB_B.html  debug_iosys_iPhone 13_128GB_C.html  debug_iosys_iPhone 13_128GB_S.html  debug_iosys_iPhone 13_256GB_A.html  debug_iosys_iPhone 13_256GB_B.html  debug_iosys_iPhone 13_256GB_C.html  debug_iosys_iPhone 13_256GB_S.html  debug_iosys_iPhone 13_512GB_A.html  debug_iosys_iPhone 13_512GB_B.html  debug_iosys_iPhone 13_512GB_C.html  debug_iosys_iPhone 13_512GB_S.html  debug_iosys_iPhone 14_128GB_A.html  debug_iosys_iPhone 14_128GB_B.html  debug_iosys_iPhone 14_128GB_C.html  debug_iosys_iPhone 14_128GB_S.html  debug_iosys_iPhone 14_256GB_A.html  debug_iosys_iPhone 14_256GB_B.html  debug_iosys_iPhone 14_256GB_C.html  debug_iosys_iPhone 14_256GB_S.html  debug_iosys_iPhone 14_512GB_A.html  debug_iosys_iPhone 14_512GB_B.html  debug_iosys_iPhone 14_512GB_C.html  debug_iosys_iPhone 14_512GB_S.html  debug_iphone12_full.html  (+3 more)
workspaces/sasoli0502/staff-task-system/: .gitignore  CLAUDE.md  README.md  pyproject.toml
(+3551 files in other folders)
