[project]
name = "price-impact-analysis"
version = "0.1.0"
description = "iPhone買取価格変更の効果計測システム"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.17.0",
    "polars>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
