[project]
name = "iphone-market-research"
version = "0.1.0"
description = "iPhone中古販売市場の相場調査システム"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "plotly>=5.17.0",
    "openpyxl>=3.1.0",
    "playwright>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
